1.2.b QA [Player] UI - Alert Message is overlapping on "Create a new Collection" - Issue Resolved

--- a/src/main/java/org/ednovo/gooru/client/mvp/play/resource/add/addresource.css
+++ b/src/main/java/org/ednovo/gooru/client/mvp/play/resource/add/addresource.css
@@ -1025,7 +1025,7 @@ body {
 	z-index:99;
 }
 .errorLabelText{
-	margin-left: 609px;
+	margin-left: 782px;
 	float: left;
 	margin-top: -12px;
 	font-style: italic;
